<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.SheetPickActivity">

    <TextView
        android:id="@+id/txtSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheets"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TableLayout
        android:id="@+id/tblSheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_border"
        android:layout_below="@+id/txtSheet"
        android:layout_alignStart="@+id/txtSheet"
        android:layout_alignEnd="@id/txtSheet"
        android:layout_above="@+id/layoutButtons"
        android:layout_marginBottom="10dp">

    </TableLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@id/txtSheet"
        android:layout_alignEnd="@+id/txtSheet">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:layout_weight="1"/>
    </LinearLayout>



</RelativeLayout>